syntax = "proto3";

option csharp_namespace = "GrpcShared";

package poc;

// Microservice doing some sums
service MicroPoc {
	// Sum two items!
	rpc Sum (SumRequest) returns (SumReply);

	// Sum array
	rpc SumArray (SumArrayRequest) returns (SumReply);

	// Accumulate results
	rpc Accumulate (stream AccumulatedElement) returns (stream SumReply);
}

// Accumulated values
message AccumulatedElement {
	int32 element = 1;
}

// Parameters to be summed
message SumRequest {
	int32 first = 1;
	int32 second = 2;
}

// Array to be summed
message SumArrayRequest {
	repeated int32 elements = 1;
}

// Summ result
message SumReply {
	int32 result = 1;
}
